--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
-/* Basic global styling */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: #f7f7f7;
+  @apply bg-gray-100 text-gray-900;
 }
